Bug 928597 - [wasabi] The switch call button name is truncated.

--- a/apps/communications/dialer/style/oncall.css
+++ b/apps/communications/dialer/style/oncall.css
@@ -442,7 +442,7 @@
   }
 
   #calls.switch > section .numberWrapper .number {
-    font-size: 2.3rem;
+    font-size: 2.3rem !important;
   }
 
   #calls > section .fake-number {
